# MeshFix

./: .gitignore  CMakeLists.txt  CMakePresets.json  MeshFix.cpp  MeshFix.h  Polyhedron.cpp  Polyhedron.h  README.md
